# stingray-python

./: README.md  make.rb
engine/: CMakeLists.txt  README.md  plugin.cpp  python_application.cpp  python_application.h  python_basic.cpp  python_basic.h  python_capture_frame.cpp  python_capture_frame.h  python_keyboard.cpp  python_keyboard.h  python_level.cpp  python_level.h  python_plugin.cpp  python_plugin.h  python_shading_environment.cpp  python_shading_environment.h  python_storyteller.cpp  python_storyteller.h  python_unit.cpp  python_unit.h  python_window.cpp  python_window.h  python_world.cpp  python_world.h  resource.h
plugin/: python_plugin.stingray_plugin
plugin/python_project/: boot.package  classify_image.py  python-init.py  python.stingray_project
